[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/ring.obj" type="ArrayMesh" id=1]
[ext_resource path="res://demos/Rings.gd" type="Script" id=2]
[ext_resource path="res://resources/box.dae" type="PackedScene" id=3]
[ext_resource path="res://resources/triangle.dae" type="PackedScene" id=4]

[sub_resource type="SpatialMaterial" id=1]
vertex_color_use_as_albedo = true
metallic = 0.61
metallic_specular = 0.0
roughness = 0.48
rim_enabled = true
rim = 1.0
rim_tint = 0.5

[sub_resource type="SpatialMaterial" id=2]
vertex_color_use_as_albedo = true
albedo_color = Color( 0.470588, 0.615686, 0.862745, 1 )
metallic = 0.62
metallic_specular = 0.28
metallic_texture_channel = 1
roughness = 0.71
rim_enabled = true
rim = 0.0
rim_tint = 0.67

[sub_resource type="SpatialMaterial" id=3]
vertex_color_use_as_albedo = true
albedo_color = Color( 0.666667, 0.764706, 0.870588, 1 )
metallic = 0.61
metallic_specular = 0.0
roughness = 0.48
rim_enabled = true
rim = 1.0
rim_tint = 0.5

[sub_resource type="Environment" id=4]
background_color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
tonemap_mode = 2
auto_exposure_enabled = true
auto_exposure_speed = 0.01
ss_reflections_enabled = true
ssao_enabled = true
ssao_intensity = 125.44
glow_enabled = true
glow_intensity = 0.69

[node name="Spatial" type="Spatial"]
script = ExtResource( 2 )

[node name="Group1" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.851104, -0.524996, 0, 0.524996, 0.851104, 2.86848, -1.54898, -5.01402 )

[node name="RingA" type="MeshInstance" parent="Group1"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = ExtResource( 1 )
material/0 = SubResource( 1 )

[node name="Group2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.851104, -0.524996, 0, 0.524996, 0.851104, -2.45209, -1.54898, -4.04415 )

[node name="RingB" parent="Group2" instance=ExtResource( 4 )]
transform = Transform( 0.1, 0, 0, 0, 0.1, -3.72529e-09, 0, 3.72529e-09, 0.1, 0, 0, 0 )

[node name="Cube" parent="Group2/RingB" index="0"]
material/0 = SubResource( 2 )

[node name="Group3" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.851104, -0.524996, 0, 0.524996, 0.851104, 0.0555201, -3.41441, -1.30531 )

[node name="RingC" parent="Group3" instance=ExtResource( 3 )]
transform = Transform( 0.1, 0, 0, 0, 0.1, 3.72529e-09, 0, -3.72529e-09, 0.1, 0, 0, 0 )

[node name="Cube" parent="Group3/RingC" index="0"]
material/0 = SubResource( 3 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.68765, 3.76195, 0.0199966 )
visible = false

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.737218, 0.675654, 0, -0.675654, 0.737218, 0.401289, 5.03752, 4.97323 )
environment = SubResource( 4 )
fov = 50.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.721579, 0.692332, 0, -0.692332, 0.721579, 0, 5.81906, 5.23915 )
light_energy = 0.2
shadow_enabled = true
shadow_reverse_cull_face = true

[editable path="Group2/RingB"]

[editable path="Group3/RingC"]
